Change the social media links and deploy to GCP

--- a/app.yaml
+++ b/app.yaml
@@ -1,27 +1,1 @@
-runtime: python27
-api_version: 1
-threadsafe: true
-
-handlers:
-- url: /favicon
-  static_dir: favicon
-
-- url: /images
-  static_dir: images
-
-- url: /css
-  static_dir: css
-
-- url: /js
-  static_dir: js
-
-- url: /libs
-  static_dir: libs
-
-- url: /.*
-  script: main.app
-  secure: always
-
-libraries:
-- name: jinja2
-  version: latest
+runtime: nodejs10
